logs/sflf2t.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SFLF2T-0.1.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sflf2t'...
Compiling './lib/python3.5/site-packages/sflf2t/__init__.py'...
***   File "./lib/python3.5/site-packages/sflf2t/__init__.py", line 48
    print "Commands:", functions
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/config.py'...
***   File "./lib/python3.5/site-packages/sflf2t/config.py", line 66
    print "WARNING, plugin %s at location %s doesn't have a `plugin_name` and is probably not a SFL-F2T plugin" % (ep.name, module.__file__)
                                                                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sflf2t/core.py'...
***   File "./lib/python3.5/site-packages/sflf2t/core.py", line 55
    print "Executing fetch for plugin %s" % plugin.short_name
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/git.py'...
***   File "./lib/python3.5/site-packages/sflf2t/git.py", line 20
    print "=== Checking repo %s" % repo
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sflf2t/old'...
Compiling './lib/python3.5/site-packages/sflf2t/old/__init__.py'...
***   File "./lib/python3.5/site-packages/sflf2t/old/__init__.py", line 135
    print "Choisir une date:"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/old/f2tsearchparser.py'...
***   File "./lib/python3.5/site-packages/sflf2t/old/f2tsearchparser.py", line 17
    print '-' * 32
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/old/hamster.py'...
***   File "./lib/python3.5/site-packages/sflf2t/old/hamster.py", line 22
    "qualite": {cie: 57, type: "qualite", bh: False, ticket: False}
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sflf2t/old/private_automator.py'...
***   File "./lib/python3.5/site-packages/sflf2t/old/private_automator.py", line 41
    print desc
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/old/rmsearcher.py'...
***   File "./lib/python3.5/site-packages/sflf2t/old/rmsearcher.py", line 17
    print '-' * 32
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/private.py'...
***   File "./lib/python3.5/site-packages/sflf2t/private.py", line 37
    print "Populating entries entry", entry
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/redmine.py'...
***   File "./lib/python3.5/site-packages/sflf2t/redmine.py", line 15
    print "REDMINE entries to be Submitted:"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflf2t/zimbra.py'...
***   File "./lib/python3.5/site-packages/sflf2t/zimbra.py", line 31
    print "Getting num"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vobject'...
Listing './lib/python3.5/site-packages/vobject-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
